--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <title>MediCenter</title>
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <div class="logo">
+        <img href="/modulo7-site/index.html" src="/modulo7-site/assets/img/logo.png" alt="logo">
+      </div>
+      <div class="menu">
+
+      </div>
+    </div>
+  </header>
 </body>
 </html>
