Construção do menu

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>MediCenter</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -13,9 +15,20 @@
         <img href="/modulo7-site/index.html" src="/modulo7-site/assets/img/logo.png" alt="logo">
       </div>
       <div class="menu">
-
+        <nav>
+          <ul>
+            <li>
+              <a href="#" class="nav-ativo">Home</a>
+              <a href="#" class="nav-ativo">Home</a>
+              <a href="#" class="nav-ativo">Home</a>
+              <a href="#" class="nav-ativo">Home</a>
+              <a href="#" class="nav-ativo">Home</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
   </header>
 </body>
+
 </html>
