Adicionado titulo principal, infos e estilizações

--- a/index.html
+++ b/index.html
@@ -19,16 +19,64 @@
           <ul>
             <li>
               <a href="#" class="nav-ativo">Home</a>
-              <a href="#" class="nav-ativo">Home</a>
-              <a href="#" class="nav-ativo">Home</a>
-              <a href="#" class="nav-ativo">Home</a>
-              <a href="#" class="nav-ativo">Home</a>
+              <a href="#">blog</a>
+              <a href="#">pages</a>
+              <a href="#">departments</a>
+              <a href="#">timetable</a>
+              <a href="#">gallery</a>
+              <a href="#">contact</a>
             </li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
+  <section id="banner">
+    <div class="container coluna">
+      <div class="banne_headline">
+        <h1>Top notch experience</h1>
+        <h2>Medicenter is a responsive template perfect for all screen sizes</h2>
+      </div>
+      <div class="banner_opacoes">
+        <div class="banner1">
+          <div class="banner_titulo">Emergency Case</div>
+          <div class="banner_descricao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aspernatur
+            repudiandae dolor natus, recusandae accusamus corrupti, deleniti, hic provident exercitationem numquam
+            doloremque maxime facilis esse autem soluta culpa. Minus, nisi.</div>
+          <a href="#">Read more 🠖</a>
+        </div>
+        <div class="banner2">
+          <div class="banner_titulo">Doctors Timetable</div>
+          <div class="banner_descricao">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium aspernatur
+            repudiandae dolor natus, recusandae accusamus corrupti, deleniti, hic provident exercitationem numquam
+            doloremque maxime facilis esse autem soluta culpa. Minus, nisi.</div>
+          <a href="#">Read more 🠖</a>
+        </div>
+        <div class="banner3">
+          <div class="banner_titulo">Opening Hours</div>
+          <div class="dia_horas">
+            <div class="dias">
+              <table cellspacing="0">
+                <tr>
+                  <td>Monday - Friday</td>
+                  <td class="horas">8:00 - 17:00</td>
+                </tr>
+                <tr>
+                  <td>Saturday</td>
+                  <td class="horas">9:30 - 17:30</td>
+                </tr>
+                <tr>
+                  <td>Sunday</td>
+                  <td class="horas">9:30 - 15:00</td>
+                </tr>
+                
+              </table>
+             
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
