Introdução de novas seções, noticias e departamento

--- a/index.html
+++ b/index.html
@@ -69,13 +69,132 @@
                   <td>Sunday</td>
                   <td class="horas">9:30 - 15:00</td>
                 </tr>
-                
+
               </table>
-             
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
+  </section>
+  <section id="geral">
+    <dic class="container">
+      <section>
+        <div class="widget">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto">Latest News</div>
+            <div class="widget_titulo_bar"></div>
+          </div>
+          <div class="widget_corpo flex">
+            <article>
+              <a href="#">
+                <div class="nova_data">
+                  <div class="novo_post_at">09 JULY 24</div>
+                  <div class="novos_comentarios">3</div>
+                </div>
+                <div class="nova_thumbnail">
+                  <img
+                    src="/modulo7-site/assets/img/depositphotos_482882832-stock-photo-black-pediatrician-doctor-doing-check.jpg"
+                    alt="">
+                </div>
+                <div class="novo_titulo">
+                  Lorem ipsum, dolor sit amet consectetur.
+                </div>
+                <div class="novos_resumo">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolor ipsum quae vel! Molestiae
+                  amet
+                  veniam neque soluta labore. Quaerat sit optio nihil quibusdam rem voluptatem. Tempore unde officia
+                  debitis.
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="#">
+                <div class="nova_data">
+                  <div class="novo_post_at">09 JULY 24</div>
+                  <div class="novos_comentarios">7</div>
+                </div>
+                <div class="nova_thumbnail">
+                  <img
+                    src="/modulo7-site/assets/img/medicina-cuidados-de-saude-pediatria-e-conceito-de-pessoas-medico-ou-pediatra-feliz-segurando-o-bebe-em-exame-medico-na-clinica_380164-185353.avif"
+                    alt="">
+                </div>
+                <div class="novo_titulo">
+                  Lorem ipsum, dolor sit amet consectetur.
+                </div>
+                <div class="novos_resumo">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolor ipsum quae vel! Molestiae
+                  amet
+                  veniam neque soluta labore. Quaerat sit optio nihil quibusdam rem voluptatem. Tempore unde officia
+                  debitis.
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="#">
+                <div class="nova_data">
+                  <div class="novo_post_at">08 JULY 24</div>
+                  <div class="novos_comentarios">2</div>
+                </div>
+                <div class="nova_thumbnail">
+                  <img src="/modulo7-site/assets/img/medico-de-vista-lateral-fazendo-uma-explicacao_23-2148231290.avif"
+                    alt="">
+                </div>
+                <div class="novo_titulo">
+                  Lorem ipsum, dolor sit amet consectetur.
+                </div>
+                <div class="novos_resumo">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolor ipsum quae vel! Molestiae
+                  amet
+                  veniam neque soluta labore. Quaerat sit optio nihil quibusdam rem voluptatem. Tempore unde officia
+                  debitis.
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="#">
+                <div class="nova_data">
+                  <div class="novo_post_at">08 JULY 24</div>
+                  <div class="novos_comentarios">6</div>
+                </div>
+                <div class="nova_thumbnail">
+                  <img src="/modulo7-site/assets/img/5044250-garotinha-fofa-no-exame-do-pediatra-foto.jpg" alt="">
+                </div>
+                <div class="novo_titulo">
+                  Lorem ipsum, dolor sit amet consectetur.
+                </div>
+                <div class="novos_resumo">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita dolor ipsum quae vel! Molestiae
+                  amet
+                  veniam neque soluta labore. Quaerat sit optio nihil quibusdam rem voluptatem. Tempore unde officia
+                  debitis.
+                </div>
+              </a>
+            </article>
+          </div>
+        </div>
+      </section>
+      <aside>
+        <div class="widget">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto">Departments</div>
+            <div class="widget_titulo_bar"></div>
+          </div>
+          <div class="widget_corpo">
+
+          </div>
+        </div>
+        <div class="widget">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto">Make An Appointment</div>
+            <div class="widget_titulo_bar"></div>
+          </div>
+          <div class="widget_corpo">
+
+          </div>
+        </div>
+      </aside>
+    </dic>
   </section>
 </body>
 
