Adicionado rodape e começando as estilizações juntamente com as informações

--- a/index.html
+++ b/index.html
@@ -196,6 +196,77 @@
       </aside>
     </dic>
   </section>
+  <footer>
+    <div class="container flexColumn">
+      <div class="rodape-menu">
+        <div class="rp_1">
+          ...
+        </div>
+
+        <div class="rp_2">
+          ...
+        </div>
+
+        <div class="rp_3">
+          ...
+        </div>
+
+      </div>
+
+      <div class="rodape_area">
+        <div class="area">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto texto_rodape">Medicenter Clinic</div>
+            <div class="widget_titulo_bar"></div>
+            <div class="widget_corpo corpo_rodape_padding">
+              <div class="texto_rodape_contatos">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, aperiam animi
+              </div>
+              <div class="corpo_rodape">
+                <div class="texto_rodape_departamentos">
+                  Medicenter Clinic
+                  <br>
+                  33 Farlane Street
+                  <br>
+                  Kallor East
+                  <br>
+                  VIC 3033, Australia
+                </div>
+                <div class="texto_rodape_numeros">
+                  +123 655 655
+                  <br>
+                  +123 755 755
+                  <br>
+                  medicenter@mail.com
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="area">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto texto_rodape">Latest Posts</div>
+            <div class="widget_titulo_bar"></div>
+            <div class="widget_corpo">
+
+            </div>
+          </div>
+        </div>
+        <div class="area">
+          <div class="widget_titulo">
+            <div class="widget_titulo_texto texto_rodape">Latest Tweets</div>
+            <div class="widget_titulo_bar"></div>
+            <div class="widget_corpo">
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rodape_copy">
+        Coyright - Todos direitos reservados
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
